# info-vs-liquidity-pressure

./: .gitignore  CLAUDE.md  LICENSE  Notes.md  README.md  daily_features_distributions.py  main.py  pyproject.toml  requirements.txt  test.py  test2.py  test3.py
Documentation/: 00_abstract.tex  01_intro.tex  03_data.tex  04_pressure.tex  05_empirical.tex  07_robustness.tex  08_discussion.tex  bibliography.bib  data.tex  main.tex  methodology.tex  plan.md
Documentation/archived/: 00_abstract.tex  02_literature.tex  03_data.tex  04_pressure.tex  05_empirical.tex  06_results.tex  07_robustness.tex  09_appendix.tex  bibliography.bib
JL/: method_2.py  visualize_pi_ri_components.py
Lambda Test/: Test1
Methods_June_Lee/: persistence_reversal.py
Methods_June_Lee/feature_car_tests/: quintile_summary.csv  (+2 more)
Methods_Sung_Cho/: 0_backtest_result.md  0_build_event_features.py  0_event_features.parquet  A_backtest_result.md  A_build_event_features.py  A_event_features.parquet  B_backtest_result.md  B_build_event_features.py  B_event_features.parquet  C_backtest_result.md  C_build_event_features.py  D_backtest_result.md  D_build_event_features.py  D_event_features.parquet  build_sue_dataset.py  run_backtest_method0.py  run_continuous_regression.py  run_continuous_regression_with_sue.py
PCA/: PCA.py
SC/: B_build_event_features.py  C_event_features.parquet  D_build_event_features.py
TEST/: TEST_build_event_features.py
documentation/: docs.md
notebooks/: 01_data_exploration.ipynb  02_feature_validation.ipynb  03_event_score_validation.ipynb
src/: backtester.py
(+108 files in other folders)
